:wrench: Swagger 관련 수정